--- a/Hope-it-doesn-t-snow-weatherforecast.css
+++ b/Hope-it-doesn-t-snow-weatherforecast.css
@@ -1,12 +1,12 @@
 body{
-    background-image: url(source/weather.png);
+    background-image: url(./source/weather.png);
 }
 header{
     margin: 10px 0;
     text-align: center;
     font-size: 50px;
     font-family: 'IM Fell Great Primer SC', serif;
-    background-image: url(source/canadian-dollar.png);
+    background-image: url(./source/canadian-dollar.png);
 }
 .col-2{
     margin: 15px;
